--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,18 +6,39 @@
     <link rel="stylesheet" href="main.css" type="text/css"/>
 </head>
 <body>
-    <h1>Join our email list</h1>
-    <p>To join our email list, enter your name and email address below</p>
+<img src="Murach_image.jpg" alt="Murch logo" width="100" height="100"/>
+    <h1>Survey</h1>
+    <p>If you don't have a moment, we'd appreciate it if you would fill out this survey.</p>
+    <h2>Your information:</h2>
     <form action="emailList" method="post">
         <input type="hidden" name="action" value="add"/>
-        <label>Email:</label>
-        <input type="email" name="email" required><br>
-        <label>First Name:</label>
+        <label>First Name</label>
         <input type="text" name="firstName" required><br>
-        <label>Last Name:</label>
+        <label>Last Name</label>
         <input type="text" name="lastName" required><br>
-        <label>&nbsp;</label>
-        <input type="submit" value="Join Now" id="submit">
+        <label>Email</label>
+        <input type="email" name="email" required><br>
+        <label>Date of Birth</label>
+        <input type="text" name="dateOfBirth" required><br>
+        <h2>How did you hear about us?</h2>
+        <input type="radio" name="contactVia" value="Search engine" id="search" checked>
+        <label for="search">Search engine</label>
+        <input type="radio" name="contactVia" value="Word of mouth" id="word">
+        <label for="word">Word of mouth</label>
+        <input type="radio" name="contactVia" value="Social Media" id="social">
+        <label for="social">Social Media</label>
+        <input type="radio" name="contactVia" value="Other" id="other">
+        <label for="other">Other</label><br>
+        <h2>Would you like to receive announcements about new CDs and special offers?</h2>
+        <input type="checkbox" name="wouldlike">YES, I'd like that.<br>
+        <br><input type="checkbox" name="emailAnnouncements">YES, please send me email announcements.<br>
+        <br> Please contact me by:
+        <select name="contact">
+            <option value="emailOrPostalMail" selected>Email or postal mail</option>
+            <option value="emailOnly">Email only</option>
+            <option value="postalMailOnly">Postal mail only</option>
+        </select><br>
+        <br><input type="submit" value="Submit" id="submit">
     </form>
 </body>
 </html>
