--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <h1>Survey</h1>
     <p>If you don't have a moment, we'd appreciate it if you would fill out this survey.</p>
     <h2>Your information:</h2>
-    <form action="emailList" method="post">
+    <form action="survey" method="post">
         <input type="hidden" name="action" value="add"/>
         <label>First Name</label>
         <input type="text" name="firstName" required><br>
